fix(tests): update test logic and minor refactoring in services
Simplified null-checks in `PersistenceService`, adjusted query param extraction in `AuthorizationControllerTest`, and improved usage of collection APIs in test assertions.